--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-simple-typewriter": "^5.0.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
